Fix for QPID-2470 - Broker does not honour flow-to-disk policy on recovery

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@933711 13f79535-47bb-0310-9956-ffa450edef68