qpid/cpp/src/qpid/broker/Exchange.cpp
@@ -83,8 +83,9 @@ void Exchange::doRoute(Deliverable& msg, ConstBindingList b)
 
     if (b.get()) {
         // Block the content release if the message is transient AND there is more than one binding
-        if (!msg.getMessage().isPersistent() && b->size() > 1)
+        if (!msg.getMessage().isPersistent() && b->size() > 1) {
             msg.getMessage().blockContentRelease();
+        }
 
         for(std::vector<Binding::shared_ptr>::const_iterator i = b->begin(); i != b->end(); i++, count++) {
             msg.deliverTo((*i)->queue);
